@@ -1,3 +1,13 @@
+2007-11-12  Josh Aas  <joshmoz@gmail.com>
+
+        Reviewed by Darin.
+
+        - http://bugs.webkit.org/show_bug.cgi?id=15946
+          add NPPValue NPPVpluginDrawingModel (Mozilla bug 403418 compat)
+
+        * Plugins/WebBaseNetscapePluginView.mm:
+        (-[WebBaseNetscapePluginView setVariable:value:]):
+
 2007-11-12  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
