@@ -1,3 +1,12 @@
+2007-11-12  Josh Aas  <joshmoz@gmail.com>
+
+        Reviewed by Darin.
+
+        - http://bugs.webkit.org/show_bug.cgi?id=15946
+          add NPPValue NPPVpluginDrawingModel (Mozilla bug 403418 compat)
+
+        * bindings/npapi.h:
+
 2007-11-12  Darin Adler  <darin@apple.com>
 
         Reviewed by Sam.
